--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@
   }
 }
 
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 h1 {
   font-size: 3em;
   color: #646cff;
