--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,25 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  padding: 40px;
-  @media (max-width: 700px) {
-    padding: 20px;
-  }
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  place-items: flex-start;
   min-width: 320px;
   min-height: 100vh;
+  padding: 40px;
+  max-width: 100%;
+  @media (max-width: 700px) {
+    padding: 20px;
+  }
 }
+
+#root {
+  width: 100%;
+}
+
 
 h1 {
   font-size: 3em;
